<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">CONJUCTION (AND)</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="a_b">A ^ B</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="submit">SUBMIT</string>
    <string name="correct_answer">Total correct answers: %d</string>
</resources>